--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Landin Page</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="css/estilo.css">
 </head>
 <body>
-	<dir class="header">
+	<div class="header">
 		<div class="center">
 			<img src="imagem/logo.png" alt="">
 		</div><!--center-->
-	</dir><!-- /header -->
+	</div><!-- /header -->
 
 	<div class="container-banner">
 		<div class="center">
